# name: TestFind.test[uvloop-danny-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': None,
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': 'reads',
        'uploaded_at': None,
        'user': 'danny',
      },
    ],
  }
---
# name: TestFind.test[uvloop-danny-reads]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': None,
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': 'reads',
        'uploaded_at': None,
        'user': 'danny',
      },
    ],
  }
---
# name: TestFind.test[uvloop-danny-reference]
  <class 'dict'> {
    'documents': <class 'list'> [
    ],
  }
---
# name: TestFind.test[uvloop-jake-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': None,
        'id': 3,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': None,
        'uploaded_at': None,
        'user': 'jake',
      },
    ],
  }
---
# name: TestFind.test[uvloop-jake-reads]
  <class 'dict'> {
    'documents': <class 'list'> [
    ],
  }
---
# name: TestFind.test[uvloop-jake-reference]
  <class 'dict'> {
    'documents': <class 'list'> [
    ],
  }
---
# name: TestFind.test[uvloop-lester-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': None,
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': 'reference',
        'uploaded_at': None,
        'user': 'lester',
      },
    ],
  }
---
# name: TestFind.test[uvloop-lester-reads]
  <class 'dict'> {
    'documents': <class 'list'> [
    ],
  }
---
# name: TestFind.test[uvloop-lester-reference]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': None,
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': 'reference',
        'uploaded_at': None,
        'user': 'lester',
      },
    ],
  }
---
# name: TestUpload.test[uvloop-hmm]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'hmm',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': 'test',
  }
---
# name: TestUpload.test[uvloop-reads]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'reads',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': 'test',
  }
---
# name: TestUpload.test[uvloop-reference]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'reference',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': 'test',
  }
---
# name: TestUpload.test[uvloop-subtraction]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'subtraction',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': 'test',
  }
---
